--- a/front_end/src/styles/Home.module.css
+++ b/front_end/src/styles/Home.module.css
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 6rem;
@@ -10,7 +11,7 @@
   display: flex;
   width: 90vw;
   height: 90vh;
-  flex-direction: column;
+  flex-direction: row;
   background-color: white;
   justify-content: space-around;
   align-items: initial;
@@ -32,6 +33,17 @@
   align-items: center;
   background-color: cornsilk;
   width: 20vw;
-  height: 60vh;
+  height: 80vh;
+
+}
+
+.list{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: cornsilk;
+  width: 60vw;
+  height: 80vh;
 
 }
